--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <header>
-    <h3>Reliable, efficient delivery</h3>
-    <h4>Powered by Technology</h4>
+    <h1>Reliable, efficient delivery</h1>
+    <h2>Powered by Technology</h2>
     <p>
       Our Artificial Intelligence powered tools use millions of project data points 
   to ensure that your project is successful
@@ -21,28 +21,28 @@
   </header>
   <main>
     <article id="supervisor">
-      <h2>Supervisor</h2>
+      <h3>Supervisor</h3>
       <p>Monitors activity to identify project roadblocks</p>
       <img src="images/icon-supervisor.svg" alt="Supervisor illustrated as a magnifying glass who looks over, adminsters and guides your activity.">
     </article>
     <article id="team-builder">
-      <h2>Team Builder</h2>
+      <h3>Team Builder</h3>
       <p>Scans our talent network to create the optimal team for your project</p>
       <img src="images/icon-team-builder.svg" alt="Illustration of an online tool to formulate the optimal team for your project.">
     </article>
     <article id="karma">
-      <h2>Karma</h2>
+      <h3>Karma</h3>
       <p>Regularly evaluates our talent to ensure quality</p>
       <img src="images/icon-karma.svg" alt="Illustration of a light bulb that indicates bright capabilities in ensuring quality.">
     </article>
     <article id="calculator">
-      <h2>Calculator</h2>
+      <h3>Calculator</h3>
       <p>Uses data from past projects to provide better delivery estimates</p>
       <img src="images/icon-calculator.svg" alt="An illustration of precise data analysis on a computer screen.">
     </article>
   </main>  
   <footer>
-    <div class="attribution" role="attribution">
+    <div class="attribution" role="banner">
       <p>
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       </p>
